--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -26,3 +26,8 @@ android.enableJetifier=true
 
 # Version of flipper SDK to use with React Native
 FLIPPER_VERSION=0.99.0
+
+storePass=''
+keyPass=''
+keyalias=''
+keystore=''
