--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,6 +37,9 @@ allprojects {
     }
 }
 
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+
 android {
   signingConfigs {
     release {
