--- a/android/build.gradle
+++ b/android/build.gradle
@@ -42,6 +42,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
+ compileSdkVersion = 29
   signingConfigs {
     release {
       storeFile file('keyname.keystore')
